--- a/no-duty-no-campus.html
+++ b/no-duty-no-campus.html
@@ -56,7 +56,7 @@
                 <tr>
                     <td>07</td>
                     <td>02:10 - 02:40</td>
-                    <td>Lunge Time</td>
+                    <td>Lunch Time</td>
                 </tr>
                 <tr>
                     <td>08</td>
