--- a/yes-duty-no-campus.html
+++ b/yes-duty-no-campus.html
@@ -45,7 +45,7 @@
                 <tr>
                     <td>05</td>
                     <td>08:00 - 12:00</td>
-                    <td>Campus Time</td>
+                    <td>Working</td>
                 </tr>
                 <tr>
                     <td>06</td>
@@ -61,7 +61,7 @@
                 <tr>
                     <td>08</td>
                     <td>02:10 - 02:40</td>
-                    <td>Lunge Time</td>
+                    <td>Lunch Time</td>
                 </tr>
                 <tr>
                     <td>09</td>
