--- a/yes-duty-yes-campus.html
+++ b/yes-duty-yes-campus.html
@@ -61,7 +61,7 @@
                 <tr>
                     <td>08</td>
                     <td>02:10 - 02:40</td>
-                    <td>Lunge Time</td>
+                    <td>Lunch Time</td>
                 </tr>
                 <tr>
                     <td>09</td>
