--- a/no-duty-yes-campus.html
+++ b/no-duty-yes-campus.html
@@ -61,7 +61,7 @@
                 <tr>
                     <td>08</td>
                     <td>02:10 - 02:40</td>
-                    <td>Lunge Time</td>
+                    <td>Lunch Time</td>
                 </tr>
                 <tr>
                     <td>09</td>
@@ -70,26 +70,49 @@
                 </tr>
                 <tr>
                     <td>10</td>
-                    <td>03:00 - 9:30</td>
-                    <td>Duty Time</td>
+                    <td>03:00 - 04:30</td>
+                    <td>Academic writting or reading</td>
                 </tr>
         
                 <tr>
                     <td>11</td>
-                    <td>10:00 - 10:20</td>
-                    <td>Dinner Time</td>
+                    <td>04:30 - 05:20</td>
+                    <td>Ashar Time</td>
                 </tr>
 
                 <tr>
                     <td>12</td>
-                    <td>10:20 - 10:40</td>
-                    <td>Brush, Today's Summary, Next Day Plan</td>
+                    <td>05:30 - Magrib</td>
+                    <td>Islam practice</td>
                 </tr>
                 <tr>
                     <td>13</td>
-                    <td>10:40 - 11: 10</td>
+                    <td>After Magrib - Before Esha</td>
+                    <td>Nasta, Working</td>
+                </tr>
+
+                <tr>
+                    <td>14</td>
+                    <td>After Esha - 30 Minute</td>
+                    <td>Dinner Time</td>
+                </tr>
+
+                <tr>
+                    <td>15</td>
+                    <td>After Dinner - 10: 20</td>
+                    <td>Study</td>
+                </tr>
+                <tr>
+                    <td>16</td>
+                    <td>10:20 - 10:50</td>
+                    <td>Brush, Today's Summary, Next Day Plan</td>
+                </tr>
+                <tr>
+                    <td>17</td>
+                    <td>10:50 - 11:10</td>
                     <td>Go to Sleep</td>
                 </tr>
+
 
             </tbody>
         </table>
